--- a/src/app/markdown/markdown-editor/markdown-editor.component.html
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.html
@@ -1,3 +1,3 @@
-<p>
-  markdown-editor works!
-</p>
+<div class="editor">
+  <textarea name="name" rows="8" cols="80" (keyup)="onInputChange($event)"></textarea>
+</div>
