--- a/src/app/markdown/markdown-editor/markdown-editor.component.html
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.html
@@ -1,3 +1,34 @@
 <div class="editor">
-  <textarea name="name" rows="8" cols="80" (keyup)="onInputChange($event)"></textarea>
+  <textarea #markdown name="name" rows="8" cols="80" (keyup)="onInputChange($event)">
+# Markdown Editor
+
+Basic useful feature list:
+
+* Foo
+* Bar
+* Baz
+
+go write something yourself.
+
+Look, a list!
+
+ 1. foo
+ 2. bar
+ 3. baz
+
+And here's some code! :+1:
+
+```js
+$(function(){
+  $('div').html('I am a div.');
+});
+```
+
+This is a [link](https://github.com) to github.
+
+### Stuff used to make this:
+
+ * [markdown-it](https://github.com/markdown-it/markdown-it) for Markdown parsing
+
+  </textarea>
 </div>
