--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<app-markdown-board></app-markdown-board>
+<div class="app">
+  <app-header></app-header>
+  <div class="main-container">
+    <app-sidebar></app-sidebar>
+    <app-markdown-board></app-markdown-board>
+  </div>
+</div>
