--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
-:host {
+.app {
   width: 100%;
+  height: 100%;
+}
+
+.main-container {
+  height: calc(100% - 50px);
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
 }
