--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,32 @@
 :host {
   width: 100%;
   height: 50px;
-  background-color: lightblue;
+  top: 0;
+  background-color: #019CDA;
   position: fixed;
+  z-index: 999;
+  border-bottom: 4px solid black;
+}
+
+.container {
+  margin: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.app-title {
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.pull-right {
+  float: right;
+  button {
+    padding: 5px 10px;
+    font-size: 14px;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+  }
 }
