--- a/src/app/markdown/markdown-editor/markdown-editor.component.html
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.html
@@ -1,5 +1,5 @@
 <div class="editor">
-  <textarea #markdown name="name" rows="8" cols="80" (keyup)="onInputChange($event)">
+  <textarea #markdown>
 # Markdown Editor
 
 Basic useful feature list:
