--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@ html, body {
   overflow: hidden;
 }
 
+.CodeMirror {
+  height: 100%;
+}
+
 
 .theme {
   a{ color: #0645ad; text-decoration:none;}
