--- a/src/app/markdown/markdown-editor/markdown-editor.component.scss
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.scss
@@ -6,5 +6,8 @@
     height: 100%;
     box-sizing: border-box;
     border: 1px solid #ccc;
+    resize: none;
+    font-size: 13px;
+    padding: 20px;
   }
 }
