--- a/src/app/markdown/markup-preview/markup-preview.component.html
+++ b/src/app/markdown/markup-preview/markup-preview.component.html
@@ -1,3 +1,5 @@
+<div class="preview-header flex">
+  <h1> Preview </h1>
+</div>
 <div class="preview theme" [innerHTML]="previewMarkup" #preview>
-
 </div>
