--- a/src/app/markdown/markup-preview/markup-preview.component.scss
+++ b/src/app/markdown/markup-preview/markup-preview.component.scss
@@ -1,3 +1,10 @@
+.preview-header {
+  background: #d2d2d2;
+  height: 50px;
+  position: fixed;
+  top: 56px;
+  width: 40%;
+}
 .preview {
   padding: 20px;
   height: 100%;
