--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,5 +1,9 @@
+:host {
+  padding: 5px;
+}
 .sidebar {
   height: 100%;
   width: 200px;
-  padding-top: 20px;
+  // padding-top: 20px;
+  border: 1px solid #d2d2d2;
 }
