--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-   <h1 class="app-title"> App Name </h1>
-   <div class="pull-right">
-     <button> Login </button>
+   <div class="app-title"> Markdown Docs </div>
+   <div class="app-nav pull-right">
+     <!-- <button> Login </button> -->
    </div>
 </div>
