--- a/src/app/markdown/markdown-editor/markdown-editor.component.scss
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.scss
@@ -1,13 +1,18 @@
+:host {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .editor-header {
   background: #d2d2d2;
   height: 50px;
-  position: fixed;
-  top: 56px;
-  width: 50%;
+  // position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .editor {
-  margin-top: 60px; //because of editor header
+  // margin-top: 60px; //because of editor header
   height: 100%;
   width: 100%;
   textarea {
