--- a/src/app/markdown/markup-preview/markup-preview.component.scss
+++ b/src/app/markdown/markup-preview/markup-preview.component.scss
@@ -1,9 +1,10 @@
+:host {
+  width: 100%;
+}
+
 .preview-header {
   background: #d2d2d2;
   height: 50px;
-  position: fixed;
-  top: 56px;
-  width: 40%;
 }
 .preview {
   padding: 20px;
