--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -2,21 +2,25 @@
   width: 100%;
   height: 50px;
   top: 0;
-  background-color: #019CDA;
+  background-color: #448AFF;
   position: fixed;
   z-index: 999;
+  color: #FFF;
 }
 
 .container {
   margin: auto;
   padding-left: 5px;
   padding-right: 5px;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin: 0 15px;
 }
 
 .app-title {
   font-size: 18px;
-  text-transform: uppercase;
-  font-weight: bold;
+  // text-transform: uppercase;
 }
 
 .pull-right {
