--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,9 +1,18 @@
 :host {
   padding: 5px;
+  overflow-y: auto;
 }
 .sidebar {
   height: 100%;
   width: 200px;
-  // padding-top: 20px;
   border: 1px solid #d2d2d2;
+}
+
+.sidebar ul {
+  list-style: none;
+}
+
+input {
+  display: flex;
+  flex-grow: 1;
 }
