--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,9 +1,16 @@
 <div class="sidebar">
-  <h1> Navigation </h1>
-  <ul *ngIf="items.length">
-    <li *ngFor="let item of items"> {{item}} </li>
-  </ul>
-  <!--<p *ngIf="done"> {{name}} </p>-->
-  <input #fileName type="text" (keyup)="validateName(fileName)" (keyup.enter)="setName(fileName)" [(ngModel)]="name">
-  <button (click)="setName(fileName)"> add </button>
+  <section class="header flex">Navigation Menu</section>
+  <section class="nav-form">
+
+    <div class="menu-row" *ngFor="let item of menuItems; let i = index;" >
+      <textarea appAutogrow rows="1" (keydown)="onKeyDown($event, i)">{{item.title}}</textarea>
+    </div>
+
+    <!-- <div class="new-row">Add</div> -->
+
+  </section>
+
+  <section class="nav-hints">
+    hints
+  </section>
 </div>
