--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -6,6 +6,47 @@
   height: 100%;
   width: 200px;
   border: 1px solid #d2d2d2;
+  display: flex;
+  flex-direction: column;
+
+  .header {
+    height: 50px;
+    flex-shrink: 0;
+  }
+  .nav-form {
+    flex-grow: 1;
+    padding: 0 15px;
+  }
+  .nav-hints {
+    display: none;
+  }
+
+  .menu-row {
+    display: flex;
+
+    textarea {
+      overflow: hidden;
+      word-wrap: break-word;
+      font-size: 16px;
+      border: none;
+
+      width: 100%;
+      height: 20px;
+      border: 1px solid transparent;
+      padding: 3px 5px;
+      resize: none;
+
+      &:hover, &:focus {
+        border: 1px solid #DCDBDB;
+      }
+    }
+
+    &:before {
+      content: '-';
+      margin-right: 5px;
+      margin-top: 3px;
+    }
+  }
 }
 
 .sidebar ul {
