--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,22 @@ body {
   height: 100%;
 }
 
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active
+{
+    outline:0px !important;
+    -webkit-appearance:none;
+}
 
 /* global utility classes */
 
