removed '#' from ul.

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -30,9 +30,8 @@
   sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
   sup { top: -0.5em; }
   sub { bottom: -0.25em; }
-  ul, ol { margin: 0;padding: 0 0 5px;list-style: none;font-size: 16px;font-weight: 700;border-bottom: 1px solid #f0f2f1;
+  ul, ol { margin: 0;padding: 0 0 5px;font-size: 16px;font-weight: 700;border-bottom: 1px solid #f0f2f1;
     -webkit-font-smoothing: antialiased; color: #616161;}
-  li:before{color: #3E2723;content: "# ";margin-right: .25em;}
   li p:last-child { margin:0 }
   dd { margin: 0 0 0 2em; }
   img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
