--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="app">
-  <app-header></app-header>
-  <div class="main-container">
-    <app-sidebar></app-sidebar>
-    <app-markdown-board></app-markdown-board>
-  </div>
-</div>
+<router-outlet></router-outlet>
