--- a/src/app/markdown/markdown-board/markdown-board.component.scss
+++ b/src/app/markdown/markdown-board/markdown-board.component.scss
@@ -1,10 +1,30 @@
-:host {
-  width: calc(100% - 200px); /* Since sidebar width is 200px */
-  padding: 5px;
+.app {
+  width: 100%;
+  height: 100%;
 }
 
-.board {
+.main-container {
+  height: calc(100% - 70px);
   width: 100%;
+  margin-top: 50px;
+  display: flex;
+
+  .main-content {
+    padding: 10px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.sidebar {
+  width: 200px;
+  height: 100%;
+}
+
+
+.board {
+  width: calc(100% - 200px); /* Since sidebar width is 200px */
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -13,6 +33,9 @@
   .preview {
     width: 50%;
     border: 1px solid #d2d2d2;
+  }
+  .editor {
+    border-right-width: 0;
   }
   .preview {
     overflow-y: auto;
