--- a/src/app/markdown/markdown-editor/markdown-editor.component.scss
+++ b/src/app/markdown/markdown-editor/markdown-editor.component.scss
@@ -1,7 +1,8 @@
 .editor-header {
-  background: #d2d2d2;
+  background-color: #EEEEEE;
   height: 50px;
   width: 100%;
+  color: #616161;
 }
 
 .editor {
