--- a/src/app/markdown/markup-preview/markup-preview.component.scss
+++ b/src/app/markdown/markup-preview/markup-preview.component.scss
@@ -1,10 +1,8 @@
-:host {
-  width: 100%;
-}
-
 .preview-header {
-  background: #d2d2d2;
+  background-color: #EEEEEE;
   height: 50px;
+  width: 100%;
+  color: #616161;
 }
 .preview {
   padding: 20px;
