--- a/src/app/markdown/header/header.component.html
+++ b/src/app/markdown/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="header-container">
    <div class="app-title"> Markdown Docs </div>
-   <div class="app-nav pull-right">
-     <!-- <button> Login </button> -->
+   <div class="app-nav">
+     <a routerLink="/offline">Offline Preview</a>
    </div>
 </div>
