--- a/src/app/markdown/header/header.component.scss
+++ b/src/app/markdown/header/header.component.scss
@@ -8,7 +8,7 @@
   color: #FFF;
 }
 
-.container {
+.header-container {
   margin: auto;
   padding-left: 5px;
   padding-right: 5px;
@@ -20,16 +20,12 @@
 
 .app-title {
   font-size: 18px;
+  flex-grow: 1;
   // text-transform: uppercase;
 }
 
-.pull-right {
-  float: right;
-  button {
-    padding: 5px 10px;
-    font-size: 14px;
-    position: absolute;
-    right: 20px;
-    top: 10px;
+.app-nav {
+  a {
+    color: #FFF;
   }
 }
