--- a/src/app/markdown/sidebar/sidebar.component.scss
+++ b/src/app/markdown/sidebar/sidebar.component.scss
@@ -1,6 +1,12 @@
 :host {
   overflow-y: auto;
 }
+
+ul {
+  margin: 0;
+  padding-left: 15px;
+}
+
 .sidebar {
   height: 100%;
   width: 100%;
@@ -16,15 +22,14 @@
   }
   .nav-form {
     flex-grow: 1;
-    padding: 0 15px;
+    padding-right: 15px;
+    overflow-y: scroll;
   }
   .nav-hints {
     display: none;
   }
 
-  .menu-row {
-    display: flex;
-
+  .menu-row, .submenu-row {
     textarea {
       overflow: hidden;
       word-wrap: break-word;
@@ -32,9 +37,10 @@
       border: none;
 
       width: 100%;
-      height: 20px;
+      // height: 20px;
       border: 1px solid transparent;
-      padding: 3px 5px;
+      padding: 2px 5px;
+      margin-bottom: 2px;
       resize: none;
 
       &:hover, &:focus {
@@ -42,11 +48,11 @@
       }
     }
 
-    &:before {
-      content: '-';
-      margin-right: 5px;
-      margin-top: 3px;
-    }
+    // &:before {
+    //   content: '-';
+    //   margin-right: 5px;
+    //   margin-top: 3px;
+    // }
   }
 }
 
