--- a/src/app/markdown/sidebar/sidebar.component.html
+++ b/src/app/markdown/sidebar/sidebar.component.html
@@ -3,12 +3,12 @@
   <section class="nav-form">
 
     <ul class="menu-row">
-      <li *ngFor="let item of menuItems; let i = index;">
-        <textarea appAutogrow rows="1" (keydown)="onKeyDown($event, i)">{{item.title}}</textarea>
+      <li *ngFor="let menu of markdown.data; let i = index;">
+        <textarea appAutogrow rows="1" (focus)="onMenuSelection(menu)" (keydown)="onKeyDown($event, i)" [(ngModel)]="menu.title"></textarea>
 
         <ul class="submenu-row">
-          <li *ngFor="let submenu of item.submenu; let j = index;">
-            <textarea appAutogrow rows="1" (keydown)="onKeyDown($event, i, j)">{{submenu.title}}</textarea>
+          <li *ngFor="let submenu of menu.submenu; let j = index;">
+            <textarea appAutogrow rows="1" (focus)="onMenuSelection(submenu)" (keydown)="onKeyDown($event, i, j)" [(ngModel)]="submenu.title"></textarea>
           </li>
         </ul>
       </li>
