--- a/src/app/markdown/header/header.component.scss
+++ b/src/app/markdown/header/header.component.scss
@@ -19,13 +19,19 @@
 }
 
 .app-title {
-  font-size: 18px;
+  font-size: 24px;
   flex-grow: 1;
-  // text-transform: uppercase;
 }
 
 .app-nav {
-  a {
+  display: flex;
+  align-items: center;
+
+  .dropdown {
+    margin-right: 20px;
+  }
+
+  > a {
     color: #FFF;
   }
 }
