--- a/src/app/markdown/header/header.component.scss
+++ b/src/app/markdown/header/header.component.scss
@@ -31,6 +31,16 @@
     margin-right: 20px;
   }
 
+  .save {
+    margin-right: 20px;
+
+    .btn {
+      i {
+        padding-right: 10px;
+      }
+    }
+  }
+
   > a {
     color: #FFF;
   }
