--- a/src/app/markdown/markdown-board/markdown-board.component.html
+++ b/src/app/markdown/markdown-board/markdown-board.component.html
@@ -1,5 +1,5 @@
 <div class="app">
-  <app-header></app-header>
+  <app-header [markdown]="markdown" [projects]="projects"></app-header>
 
   <div class="main-container">
     <div class="main-content">
