fixing routing issue

--- a/src/app/markdown/header/header.component.html
+++ b/src/app/markdown/header/header.component.html
@@ -21,6 +21,6 @@
       </button>
     </div>
 
-    <a routerLink="/docs">Offline Preview</a>
+    <a [routerLink]="'/docs/project/' + mdService.currentProject.id">Offline Preview</a>
   </div>
 </div>
