modified styles for docs page.

--- a/src/app/offline/doc-header/doc-header.component.html
+++ b/src/app/offline/doc-header/doc-header.component.html
@@ -1,8 +1,6 @@
 <div class="header">
   <div class="container flex">
     <div class="app-title"> Markdown Docs </div>
-    <div class="search-box">
-      <input type="text" name="" value="" placeholder="search">
-    </div>
+    <input type="text" class="search-box" placeholder="Search">
   </div>
 </div>
