--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -30,7 +30,7 @@
   sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
   sup { top: -0.5em; }
   sub { bottom: -0.25em; }
-  ul, ol { margin: 0;padding: 0 0 5px;font-size: 16px;font-weight: 700;border-bottom: 1px solid #f0f2f1;
+  ul, ol { margin: 0;padding: 5px 15px;font-size: 16px;font-weight: 400;border-bottom: 1px solid #f0f2f1;
     -webkit-font-smoothing: antialiased; color: #616161;}
   li p:last-child { margin:0 }
   dd { margin: 0 0 0 2em; }
