--- a/src/app/offline/doc-header/doc-header.component.scss
+++ b/src/app/offline/doc-header/doc-header.component.scss
@@ -11,7 +11,6 @@
   align-items: center;
   height: 100%;
   padding: 0 15px;
-
   background-color: #FFF;
   color: #424242;
   border-bottom: 1px solid #CCC;
@@ -24,7 +23,6 @@
 }
 
 .search-box {
-  input {
-
-  }
+  border: 0;
+  font-size: 2em;
 }
