styles to preview page

--- a/src/app/offline/doc-header/doc-header.component.scss
+++ b/src/app/offline/doc-header/doc-header.component.scss
@@ -13,8 +13,8 @@
   padding: 0 15px;
   background-color: #FFF;
   color: #424242;
-  border-bottom: 1px solid #CCC;
-  border-top: 5px solid #ccc;
+  border-bottom: 1px solid #dee0df;
+  border-top: 8px solid #EF5350;
 }
 
 .app-title {
