--- a/src/app/markdown/header/header.component.html
+++ b/src/app/markdown/header/header.component.html
@@ -17,10 +17,10 @@
     <div class="save">
       <button type="button" name="button" class="btn btn-default" (click)="saveMarkdown()">
         <i class="glyphicon glyphicon-floppy-disk"></i>
-        Save
+        Save & Publish
       </button>
     </div>
 
-    <a [routerLink]="'/docs/project/' + mdService.currentProject.id">Offline Preview</a>
+    <a [routerLink]="'/docs/project/' + mdService.currentProject.id">Preview as App</a>
   </div>
 </div>
