--- a/src/app/offline/doc-nav/doc-nav.component.html
+++ b/src/app/offline/doc-nav/doc-nav.component.html
@@ -1,7 +1,8 @@
-<ul>
+<ul class="menu">
   <li *ngFor="let menu of markup.data;">
-    <span (click)="onMenuSelection(menu)"> {{menu.title}} </span>
-    <ul>
+    <span (click)="onMenuSelection(menu)" class="active"> {{menu.title}} </span>
+
+    <ul class="submenu">
       <li *ngFor="let submenu of menu.submenu;">
         <a (click)="onMenuSelection(submenu)"> {{submenu.title}}</a>
       </li>
