--- a/src/app/markdown/sidebar/sidebar.component.html
+++ b/src/app/markdown/sidebar/sidebar.component.html
@@ -17,6 +17,17 @@
   </section>
 
   <section class="nav-hints">
-    hints
+    <div>
+      Hints:
+    </div>
+    <div class="hint">
+      <span>Tab:</span> makes a sub-menu
+    </div>
+    <div class="hint">
+      <span>Shft + Tab:</span> makes a menu
+    </div>
+    <div class="hint">
+      <span>Enter:</span> creates a menu
+    </div>
   </section>
 </div>
