--- a/src/app/home/landing/landing.component.html
+++ b/src/app/home/landing/landing.component.html
@@ -1,3 +1,5 @@
-<div class="home">
-  <a routerLink="/project">Get Started</a>
+<div class="home flex">
+  <h1> Love markdown? Even we do.</h1>
+  <h3>  Converting markdown to HTML. </h3>
+  <button class="btn btn-primary"><a routerLink="/project"> Get Started </a> </button>
 </div>
