style changes to home page

--- a/src/app/home/landing/landing.component.html
+++ b/src/app/home/landing/landing.component.html
@@ -1,5 +1,9 @@
 <div class="home flex">
-  <h1> Love markdown? Even we do.</h1>
-  <h3>  Converting markdown to HTML. </h3>
-  <button class="btn btn-primary"><a routerLink="/project"> Get Started </a> </button>
+  <h1>Love markdowns? <br>Even we do.</h1>
+  <h4>
+    Origanize your app documentation as markdowns.
+    <br>
+    And turn them into Beautiful web pages with a click.
+  </h4>
+  <button class="btn btn-primary" routerLink="/project">Get Started</button>
 </div>
