made UI change to sidebar header.

--- a/src/app/markdown/sidebar/sidebar.component.scss
+++ b/src/app/markdown/sidebar/sidebar.component.scss
@@ -19,6 +19,8 @@ ul {
   .header {
     height: 50px;
     flex-shrink: 0;
+    font-size: 24px;
+    background: #EEEEEE;
   }
   .nav-form {
     flex-grow: 1;
