UI fix for margin in sidebar component.

--- a/src/app/markdown/sidebar/sidebar.component.scss
+++ b/src/app/markdown/sidebar/sidebar.component.scss
@@ -23,6 +23,7 @@ ul {
     background: #EEEEEE;
   }
   .nav-form {
+    margin-top: 5px;
     flex-grow: 1;
     padding-right: 15px;
     overflow-y: scroll;
