--- a/src/app/home/landing/landing.component.scss
+++ b/src/app/home/landing/landing.component.scss
@@ -17,7 +17,7 @@
   }
   h4 {
     text-align: center;
-    color: #BDBDBD;
+    color: #9E9E9E;
     font-size: 28px;
     line-height: 40px;
     font-weight: 200;
@@ -25,6 +25,9 @@
   .btn {
     margin-top: 2em;
     font-size: 28px;
+    font-weight: 200;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 
   a {
