--- a/src/app/markdown/sidebar/sidebar.component.scss
+++ b/src/app/markdown/sidebar/sidebar.component.scss
@@ -26,7 +26,7 @@ ul {
     margin-top: 5px;
     flex-grow: 1;
     padding-right: 15px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   .nav-hints {
     padding: 10px;
