--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Source Sans Pro", 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   overflow: hidden;
   height: 100%;
 }
